--- a/app/views/finances/_form.html.erb
+++ b/app/views/finances/_form.html.erb
@@ -149,7 +149,7 @@
 
     <div>
       <%= form.label :email, style: "display: block; margin-bottom: 10px;" %>
-      <%= form.text_field :email, style: "margin-bottom: 10px;" %>
+      <%= form.text_field :email, readonly: true, style: "margin-bottom: 10px;" %>
     </div>
 
     <div>
