--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -215,10 +215,13 @@
                   <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
                 </li>
                 <li class="nav-item">
+                  <%= link_to 'Members', members_path, class: 'nav-link' %>
+                </li>
+                <li class="nav-item">
                   <%= link_to 'Events', events_path, class: 'nav-link' %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to 'Leaderboard', members_path, class: 'nav-link' %>
+                  <%= link_to 'Leaderboard', events_path, class: 'nav-link' %>
                 </li>
               </ul>
             </nav>
