--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -32,12 +32,16 @@
       color: #555;
       margin-bottom: 15px;
     }
+
+    nav a {
+      align: centered;
+    }
   </style>
 </head>
 <body>
   <!-- Bootstrap Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">User Profile</a>
+    <a class="navbar-brand" href="<%= root_path %>">Dashboard</a>
   </nav>
 
   <div class="container">
@@ -45,6 +49,7 @@
       <h1>Profile Information</h1>
       <p><strong>Name:</strong> <%= @current_member.full_name %></p>
       <p><strong>Position:</strong> <%= @current_member.position %></p>
+      <p><strong>Points:</strong> <%= @current_member.totalPoints %></p>
     </div>
   </div>
 
