Added the phone_number string data to the members table and updated all views accordingly

--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -22,6 +22,11 @@
   </div>
 
   <div>
+    <%= form.label :phone_number, "Phone Number", style: "display: block" %>
+    <%= form.text_field :phone_number %>
+  </div>
+
+  <div>
     <%= form.label :position, "Position", style: "display: block" %>
     <%= form.text_field :position %>
   </div>
