--- a/app/views/members/_member.html.erb
+++ b/app/views/members/_member.html.erb
@@ -11,6 +11,11 @@
   </p>
 
   <p>
+    <strong>Phone Number:</strong>
+    <%= member.phone_number %>
+  </p>
+
+  <p>
     <strong>Position:</strong>
     <%= member.position %>
   </p>
