--- a/app/views/members/officer_index.html.erb
+++ b/app/views/members/officer_index.html.erb
@@ -297,6 +297,7 @@
       <th>ID</th>
       <th>Full Name</th>
       <th>Email</th>
+      <th>Phone Number</th>
       <th>Position</th>
       <th>Officer Points</th>
     </tr>
@@ -308,6 +309,7 @@
           <td><%= member.id %></td>
           <td><%= member.full_name %></td>
           <td><%= member.email %></td>
+          <td><%= member.phone_number %></td>
           <td><%= member.position %></td>
           <td><%= member.officer_points %></td>
         </tr>
@@ -316,6 +318,7 @@
           <td><%= member.id %></td>
           <td><%= member.full_name %></td>
           <td><%= member.email %></td>
+          <td><%= member.phone_number %></td>
           <td><%= member.position %></td>
           <td><%= member.officer_points %></td>
         </tr>
