--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -49,7 +49,7 @@
       <h1>Profile Information</h1>
       <p><strong>Name:</strong> <%= @current_member.full_name %></p>
       <p><strong>Email:</strong> <%= @current_member.email %></p>
-      <p><strong>Phone Number:</strong> <%= @current_member.phone_number %></p>
+      <p><strong>Phone Number:</strong> <%= @current_member.phone_number %> <a href="<%= edit_phone_number_member_path(@current_member) %>">Edit</a></p>
       <p><strong>Position:</strong> <%= @current_member.position %></p>
       <p><strong>Points:</strong> <%= @current_member.totalPoints %></p>
     </div>
