changed resolved to status and updated views accordingly and also made some changes that were bugs

--- a/app/views/finances/_finance.html.erb
+++ b/app/views/finances/_finance.html.erb
@@ -149,8 +149,8 @@
   </p>
 
   <p>
-    <strong>Resolved:</strong>
-    <%= finance.resolved %>
+    <strong>Status:</strong>
+    <%= finance.status %>
   </p>
 
 </div>
