--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -212,7 +212,7 @@
             </nav>
           </div>
         </div>
-      <% elsif current_member&.position != 'President' && current_member&.position != 'Finance Officer' && current_member&.position != 'Member' && current_member&.position != 'Pending' %>
+      <% elsif current_member&.position != 'President' && current_member&.position != 'Member' && current_member&.position != 'Pending' %>
         <h2>Officer Dashboard</h2>
         <div class="links">
           <div class="admin-links">
@@ -300,7 +300,7 @@
             <td><%= member.email %></td>
             <td><%= member.position %></td>
             <td><%= member.totalPoints %></td>
-            <% if current_member&.position == 'Officer'%>
+            <% if current_member&.position != 'Pending' && current_member&.position != 'Member'%>
               <td><%= link_to 'Show', member %></td>
               <td><%= link_to 'Edit', edit_member_path(member) %></td>
             
@@ -314,7 +314,7 @@
         <% end %>
       </tbody>
     </table>
-      <% if @current_member&.position != 'Member' %>
+      <% if @current_member&.position != 'Member' && @current_member&.position != 'Pending' %>
       <h3><%= link_to 'New Member', new_member_path %><h3>
       <%end%>
   </div>
