--- a/app/views/finances/index.html.erb
+++ b/app/views/finances/index.html.erb
@@ -238,12 +238,13 @@
         </nav>
       </div>
     </div>
+    
     <div class="finances">
       <% if current_member&.position == 'President' || current_member&.position == 'Finance Officer' %>
         <h3> Pending </h3>
         <% @finances.each do |finance| %>
           <div class = "finance">
-            <% if !finance.resolved? %>
+            <% if finance.status == 'Pending' %>
               <div class="pending-finance-box">
                 <%= render finance %>
                 <div class="showFinance">
@@ -271,7 +272,7 @@
         <h3> Completed </h3>
         <% @finances.each do |finance| %>
           <div class = "finance">
-            <% if finance.resolved? %>
+            <% if finance.status == 'Approved' %>
               <div class="completed-finance-box">
                 <%= render finance %>
                 <div class="showFinance">
@@ -293,11 +294,21 @@
           </div>
         <% end %>
 
+        <div class="floating-button">
+          <div class = "newFinance">
+            <% if @current_member&.position != 'Member' %>
+              <%= link_to new_finance_path do %>
+                <button type="button">+</button>
+              <% end %>
+            <% end %>
+          </div>
+        </div>
+
       <% elsif current_member&.position != 'President' && current_member&.position != 'Finance Officer' && current_member&.position != 'Member' && current_member&.position != 'Pending' %>
-        <h3> Pending </h3>
+        <h3> Denied </h3>
         <% @finances.each do |finance| %>
           <div class = "finance">
-            <% if !finance.resolved? %>
+            <% if finance.status == 'Denied' %>
               <% if finance.email == current_member&.email %>
                 <div class="pending-finance-box">
                   <%= render finance %>
@@ -327,11 +338,47 @@
             <% end %>
           </div>
         <% end %>
+
+        <hr class="pretty-divider">
+        <h3> Pending </h3>
+        <% @finances.each do |finance| %>
+          <div class = "finance">
+            <% if finance.status == 'Pending' %>
+              <% if finance.email == current_member&.email %>
+                <div class="pending-finance-box">
+                  <%= render finance %>
+                  <div class="showFinance">
+                    <p>
+                      <div style="display: flex;">
+                        <%= link_to finance do %>
+                          <button type="button" style="width: 30%;">
+                            <%= image_tag "view_icon.png", alt: "Show Finance", style: "width: 100%; height: auto;" %>
+                          </button>
+                        <% end %>
+                      
+                        <%= link_to edit_finance_path(finance) do %>
+                          <button type="button" style="width: 30%;">
+                            <%= image_tag "edit_icon.png", alt: "Edit Finance", style: "width: 100%; height: auto;" %>
+                          </button>
+                        <% end %>
+                      
+                        <%= button_to finance, method: :delete, style: "width: 30%;" do %>
+                          <%= image_tag "delete_icon.png", alt: "Delete Finance", style: "width: 100%; height: auto;" %>
+                        <% end %>
+                      </div>
+                    </p>
+                  </div>
+                </div>
+              <% end %>
+            <% end %>
+          </div>
+        <% end %>
+
         <hr class="pretty-divider">
         <h3> Completed </h3>
         <% @finances.each do |finance| %>
           <div class = "finance">
-            <% if finance.resolved? %>
+            <% if finance.status == 'Approved' %>
               <% if finance.email == current_member&.email %>
                 <div class="completed-finance-box">
                   <%= render finance %>
