Now can view members attendance under show, and can have an optional view attendance for events

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -95,6 +95,11 @@
             </div>
 
             <div>
+              <%= form.label :attendanceVisible, "Attendance Visible?", style: "display: block" %>
+              <%= form.check_box :attendanceVisible %>
+            </div>
+
+            <div>
               <%= form.label :image, style: "display: block" %>
               <% if event.image.present? %>
                 <%= image_tag "data:image/png;base64,#{event.image}", alt: 'Image' %>
