--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -93,6 +93,10 @@
           <p class="card-text">
             <strong>End time:</strong> <%= @event.end_time %>
           </p>
+
+          <p class="card-text">
+            <strong>Attendance Visibility:</strong> <%= @event.attendanceVisible %>
+          </p>
         </div>
       </div>
     </div>
