Updated leaderboard to only show top 10 members

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -159,7 +159,11 @@
         background-color: #04AA6D;
         color: white;
       }
-
+      <% if current_member&.position == 'Member'%>
+        tr:nth-child(n+11){
+          display:none;
+        }
+      <% end %>
 
     </style>
   </head>
