Implemented a red dot which has the number of pending finnance requests displayed on all pages for presidents and officers

--- a/app/views/finances/index.html.erb
+++ b/app/views/finances/index.html.erb
@@ -193,10 +193,25 @@
       background-color: #ccc;
       width: 30%;
     }
+    .red-dot {
+      width: 22px;
+      height: 22px;
+      background-color: red;
+      border-radius: 100%;
+      position: absolute;
+      top: 190px;
+      left: 1410px;
+      z-index: 1000000;
+    }
 
   </style>
 </head>
 <body>
+<% if current_member&.position != 'Member' %>
+  <% if Finance.where(status: 0).count %>
+      <div class="red-dot"><%= Finance.where(status: 0).count %>!</div>
+  <% end %>
+<% end %>
 
 <% if admin_signed_in? %>
   <% current_member = Member.find_by(email: current_admin.email) %>
