--- a/app/views/attendances/index.html.erb
+++ b/app/views/attendances/index.html.erb
@@ -211,7 +211,7 @@
 <p style="color: green"><%= notice %></p>
 
 <% if current_member&.position != 'Member' %>
-  <% if Finance.where(status: 0).count %>
+  <% if Finance.where(status: 0).count > 0 %>
       <div class="red-dot"><%= Finance.where(status: 0).count %>!</div>
   <% end %>
 <% end %> 
