Central Time Fix

--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -73,7 +73,7 @@
             </p>
 
             <p class="card-text">
-              <strong>End time:</strong> <%= event.end_time %>
+            <strong>Start time:</strong> <%= event.end_time.strftime("%B %d, %Y %H:%M %p %Z") %>
             </p>
           </div>
         </div>
